# sky2_add_tasks

./: .coveragerc  .gitignore  README.md  pyproject.toml
htmlcov/: index.html  z_f8996bc1f023edad_base_product_py.html  z_f8996bc1f023edad_classwork_py.html  z_f8996bc1f023edad_get_data_json_py.html  z_f8996bc1f023edad_print_mixin_py.html
lesson1/: albums.py  base_product.py  classwork.py  get_data_json.py  main.py  main_14_1.py  number.py  print_mixin.py  students.py
lesson1/tests/: conftest.py  test_base_product.py  test_main.py  test_main_14_1.py  test_print_mixin.py
lesson3/: counter.py  fraction.py  logger.py  mylist.py
lesson4/: animal.py  animal_2.py  car.py
lesson5/: bird.py  cars.py  person.py
lesson6/: cars.py  employee.py  student.py
