[project]
name = "sky2-add-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Lebedev",email = "lvv1985@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["lesson1/tests"]

[tool.coverage.run]
source = ["lesson1"]
omit = ["*/tests/*"]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120